feat: sub-modules services, tests and routes
