# backend/src/modules/sub-modules/dtos/ICreateOrUpdateSubModuleDTO.ts
@@ -1,0 +1,6 @@
+export default interface ICreateOrUpdateSubModuleDTO {
+  module_id: string;
+  name: string;
+  order: number;
+  content_url: string;
+}
