# backend/src/modules/sub-modules/infra/typeorm/entities/SubModule.ts
@@ -1,0 +1,41 @@
+import {
+  Entity,
+  Column,
+  CreateDateColumn,
+  UpdateDateColumn,
+  PrimaryColumn,
+  ManyToOne,
+  JoinColumn,
+} from 'typeorm';
+
+import Module from '@modules/modules/infra/typeorm/entities/Module';
+
+@Entity('sub-modules')
+class SubModule {
+  @PrimaryColumn()
+  id: string;
+
+  @Column()
+  module_id: string;
+
+  @ManyToOne(() => Module)
+  @JoinColumn({ name: 'module_id' })
+  module: Module;
+
+  @Column()
+  name: string;
+
+  @Column()
+  order: number;
+
+  @Column()
+  content_url: string;
+
+  @CreateDateColumn()
+  created_at: Date;
+
+  @UpdateDateColumn()
+  updated_at: Date;
+}
+
+export default SubModule;
